fixed bug where modal was opening behind navbar; updated app descriptions

--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -52,7 +52,7 @@
     padding: 4px
 }
 .modal {
-    z-index: 100;
+    z-index: 1000;
 }
 .backdrop {
     z-index: 1;
